Fixed word wrap and list styling

--- a/angular/src/app/view/to-do-list/to-do-list.component.scss
+++ b/angular/src/app/view/to-do-list/to-do-list.component.scss
@@ -63,3 +63,12 @@
 .task-details {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#wrap-text {
+    max-width: 200px;
+    word-wrap: break-word;
+}
+
+th {
+    padding-right: 30px;
+}
